# doubleBooks

./: .gitignore  CMakeLists.txt  ClassDesign.txt  Makefile  README.md  verifyBuild.sh
app/: CMakeLists.txt  main.cpp
data/: Categories.csv  TransactionTypes.csv  TransactionsList.csv
doc/: CMakeLists.txt  index.html  notes.md
include/: ansi.h  ansi.tcc  csv.h  database.h  format.h  strings.h  table.h  transaction.h
lib/: CMakeLists.txt
lib/datafield/: CMakeLists.txt
lib/datafield/include/: category.h  date.h  element.h
lib/datafield/src/: currency.cpp
meta/: ProgramDesign.md  ProgramStructure.odp  buglist.md
res/: CMakeLists.txt  cmake_uninstall.cmake.in  links.md  target.desktop
res/data/: .gitignore  Accounts.csv  Report.dbklog  TransactionsList.tab  TransactionsListv2.2bk  TransactionsListv2.dbk
res/icons/: CMakeLists.txt  doublebooks-rpt.desktop.in  doublebooks-rpt.xml.in  doublebooks.desktop.in  doublebooks.xml.in  icon.rc  target.desktop  target.desktop.in  target.xml  target.xml.in
src/: ansi.cpp  ansi.h  ansi.tcc  category.cpp  category.h  csv.cpp  csv.h  currency.cpp  currency.h  database.cpp  database.h  date.cpp  date.h  element.h  format.h  icon.rc  main.cpp  sayHello.cpp  strings.cpp  strings.h  table.cpp  table.h  transaction.cpp  transaction.h
src-trees/: CMakeLists.txt
src-trees/accountList/: CMakeLists.txt
src-trees/accountList/include/: accountList.h
src-trees/accountList/src/: accountList.cpp
src-trees/accountList/test/: CMakeLists.txt  accountList.test.cpp
src-trees/ansi/: CMakeLists.txt
src-trees/ansi/include/: ansi.h  ansi.tcc  prettyString.h
src-trees/ansi/src/: ansi.cpp  prettyString.cpp
src-trees/app/: CMakeLists.txt
src-trees/app/include/: version.h.in
src-trees/app/src/: main.cpp
src-trees/csv/: CMakeLists.txt
src-trees/csv/include/: csv.h  strings.h
src-trees/csv/src/: csv.cpp  strings.cpp
src-trees/datafield/: CMakeLists.txt
src-trees/datafield/include/: account.h  category.h  currency.h  datafield.h  date.h  element.h
src-trees/datafield/src/: account.cpp  category.cpp  currency.cpp  datafield.cpp  date.cpp
src-trees/datafield/test/: CMakeLists.txt  datafield.test.cpp
src-trees/kinship/: CMakeLists.txt
src-trees/kinship/include/: childAddress.h  childAddress.tcc  childOf.h  childOf.tcc  kinship.h  parentAddress.h  parentAddress.tcc  parentOf.h  parentOf.tcc  templates.h
src-trees/kinship/src/: childAddress.cpp  childOf.cpp  parentAddress.cpp  parentOf.cpp
src-trees/kinship/test/: CMakeLists.txt  kinship.test.cpp
src-trees/misc/: CMakeLists.txt
src-trees/misc/include/: database.h  transaction.h  transaction_old.h
src-trees/misc/src/: database.cpp  table.cpp  transaction.cpp  transaction_old.cpp
src-trees/transactions/: CMakeLists.txt
src-trees/transactions/include/: entry.h  register.h  split.h  transaction.h
src-trees/transactions/src/: register.cpp  split.cpp  transaction.cpp
src-trees/transactions/test/: CMakeLists.txt  transactions.test.cpp
