# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
#
# Copyright (c) 2021, Jeremy Goossen jeremyg995@gmail.com

# Add the library subdirectories
add_subdirectory(ansi)
add_subdirectory(datafield)
# add_subdirectory(fileio)
add_subdirectory(misc)

# Add the executable subdirectory
add_subdirectory(app)
